src/theme/segment.scss
body.dark {
  ion-toolbar:not(.ion-color) {
    ion-segment:not(.ion-color) {
      > ion-segment-button {
        color: rgba(255, 255, 255, 0.4);
        --indicator-color: white;

        &.segment-button-checked {
          color: var(--ion-text-color);
          --border-color: var(--ion-text-color);
          --indicator-color-checked: var(--ion-text-color);
        }
      }
    }
  }
}

